git info pb username et pwd

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# pb de git
+# $ git config credential.helper store
+# $ git push http://example.com/repo.git
+# Username: <type your username>
+# Password: <type your password>
